--- a/src/main/resources/applications.properties
+++ b/src/main/resources/applications.properties
@@ -2,3 +2,13 @@ spring.datasource.url="jdbc:h2:file:~/test"
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=""
 spring.datasource.password=""
+spring.thymeleaf.cache: false
+
+resource:
+    endpoint: http://localhost:8080
+    getUserAge: http://localhost:8080/{name}/age
+    getUserBirthday: http://localhost:8080/{name}/birthday
+    userAdd: http://localhost:8080/user
+    userNames: http://localhost:8080/user/names
+    userAges: http://localhost:8080/user/ages
+    userBirthdays: http://localhost:8080/user/birthdays
