Templates rendering - /people not working. person.id can't be evaluated by thymeleaf.

--- a/src/main/resources/applications.properties
+++ b/src/main/resources/applications.properties
@@ -4,6 +4,7 @@ spring.datasource.username=""
 spring.datasource.password=""
 spring.thymeleaf.cache: false
 
+resource.endpoint=http://localhost:8080
 resource:
     endpoint: http://localhost:8080
     getUserAge: http://localhost:8080/{name}/age
